--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>Currency Convertor</h1>
+        <div class="heading">
+        <h1>CURRENCY CONVERTOR</h1>
+    </div>
         <form>
             <div class="amount">
-                <p>Enter Amount</p>
+                <p style="font-family:'Ink Free'; font-weight: bolder; margin-bottom: 5px;">Enter Amount</p>
                 <input type="text" value="1">
             </div>
             <div class="dropdown">
                 <div class="from">
-                    <p>From</p>
+                    <p style="font-family:'Ink Free'; font-weight: bolder;  margin-bottom: 5px;">From</p>
                     <div class="select-container">
                         <img src="https://flagsapi.com/US/flat/64.png" alt="">
                         <select name="from">
@@ -26,7 +28,7 @@
                 </div>
                 <i class="fa-solid fa-arrow-right-arrow-left"></i>
                 <div class="to">
-                    <p>To</p>
+                    <p style="font-family:'Ink Free'; font-weight: bolder;  margin-bottom: 5px;">To</p>
                     <div class="select-container">
                         <img src="https://flagsapi.com/PK/flat/64.png" alt="">
                         <select name="to">
@@ -34,8 +36,9 @@
                     </div>
                 </div>
             </div>
-            <div class="msg">1 USD = 278.70 PKR</div>
-            <button>Get Exchange Rate</button>
+            <div class="msg">1 USD = 278.2384 PKR</div>
+            <button style="font-family:'Ink Free'; font-weight: bolder;  margin-bottom: 5px; font-size: 1.25rem; ">
+                Get Exchange Rate</button>
         </form>
     </div>
     <script src="codes.js"></script>
